--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="QRcodecomponent/css/main.css">
+    
+    <link rel="stylesheet" href="css/main.css" type="text/css">
+    <link rel="stylesheet" href="QRcodecomponent/css/main.css" type="text/css">
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
